# TALLER-02-ADA

./: Cargo.toml  main.rs  pregunta32.rs  pregunta33.rs  pregunta34.rs  pregunta35.rs  pregunta36.rs
